--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -31,7 +31,7 @@
    <div class="silk-surface kobweb-box kobweb-align-top-start" style="min-height: 100vh; background-color: rgb(22, 22, 22);">
     <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="width: 100%; background-color: rgb(22, 22, 22);">
      <div class="kobweb-box kobweb-align-top-center" style="width: 100%;">
-      <div class="kobweb-box kobweb-align-center" style="width: 100%;" id="about_company">
+      <div class="kobweb-box kobweb-align-center" style="width: 100%;">
        <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/banner.jpg" alt="Аренда автомобилей в Бишкеке">
        <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 100%; background: linear-gradient(90deg, rgba(0, 0, 0, 0.8), rgba(108, 107, 103, 0), rgba(108, 107, 103, 0));"></div>
        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 90%; max-width: 1240px; padding: 50px 0px; margin: 0px 20px;">
@@ -51,7 +51,28 @@
       </div>
      </div>
      <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="width: 100%; max-width: 1240px; padding: 0px 32px;">
-      <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 40px 0px 0px;" id="carpark">
+      <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 50px 0px 0px;" id="about_company">
+       <div class="kobweb-box kobweb-align-top-start" style="width: 100%; display: flex; flex-wrap: wrap; justify-content: space-between;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="padding: 7px 0px; margin: 0px 24px 0px 0px;">
+         <span class="silk-span-text" style="font-size: 82px; line-height: 82px; font-weight: 500; color: white;">О компании</span>
+         <div class="kobweb-row kobweb-arrange-start kobweb-align-center-vert" style="margin: 12px 0px 0px;">
+          <div class="kobweb-box kobweb-align-top-start" style="height: 60px; width: 6px; background-color: rgb(72, 72, 72); border-radius: 6px;"></div><span class="silk-span-text" style="margin: 0px 0px 0px 10px; font-size: 34px; line-height: 36px; color: white;">ABOUT US</span>
+         </div>
+        </div>
+       </div>
+       <div class="silk-simple-grid" style="--silk-simple-grid-col-count-zero: 1; --silk-simple-grid-col-count-sm: 1; --silk-simple-grid-col-count-md: 3; --silk-simple-grid-col-count-lg: 3; --silk-simple-grid-col-count-xl: 3; width: 100%; margin: 60px 0px 0px; gap: 30px; justify-items: center;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="width: 280px;">
+         <img class="silk-image" style="width: 150px; height: 150px;" src="/about_company_icons/ic_price.png" alt=""><span class="silk-span-text" style="margin: 32px 0px 0px; font-size: 30px; line-height: 1.17; color: white; text-align: center; white-space: pre-wrap;">Низкие цены</span><span class="silk-span-text" style="margin: 24px 0px 0px; font-size: 16px; line-height: 1.55; color: white; font-weight: 300; text-align: center; white-space: pre-wrap;">Мы постоянно мониторим ценовой спрос, поэтому гарантируем выгодную стоимость аренды.</span>
+        </div>
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="width: 280px;">
+         <img class="silk-image" style="width: 150px; height: 150px;" src="/about_company_icons/ic_map.png" alt=""><span class="silk-span-text" style="margin: 32px 0px 0px; font-size: 30px; line-height: 1.17; color: white; text-align: center; white-space: pre-wrap;">Выезд за пределы Бишкека</span><span class="silk-span-text" style="margin: 24px 0px 0px; font-size: 16px; line-height: 1.55; color: white; font-weight: 300; text-align: center; white-space: pre-wrap;">Вы можете спокойно перемещаться на автомобиле, туда, куда требуется.</span>
+        </div>
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="width: 280px;">
+         <img class="silk-image" style="width: 150px; height: 150px;" src="/about_company_icons/ic_location.png" alt=""><span class="silk-span-text" style="margin: 32px 0px 0px; font-size: 30px; line-height: 1.17; color: white; text-align: center; white-space: pre-wrap;">Подача в любое место</span><span class="silk-span-text" style="margin: 24px 0px 0px; font-size: 16px; line-height: 1.55; color: white; font-weight: 300; text-align: center; white-space: pre-wrap;">Нет времени заехать к нам? Мы привезём или заберём автомобиль сами!</span>
+        </div>
+       </div><span class="silk-span-text" style="margin: 90px 0px 0px; font-size: 22px; line-height: 1.35; color: white; opacity: 0.7; font-weight: 300;">С 2020 года компания CarRent.kg предоставляет в аренду широкий выбор автомобилей, отвечающих различным потребностям клиентов. В нашем автопарке только подготовленные и технически исправные машины, доступные для аренды. Гибкие тарифы и разнообразные услуги для физических и юридических лиц позволили нам занять лидирующие позиции на рынке и заслужить доверие клиентов.</span>
+      </div>
+      <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 60px 0px 0px; margin: 40px 0px 0px;" id="carpark">
        <div class="kobweb-col kobweb-arrange-center kobweb-align-start" style="width: 100%;">
         <div class="kobweb-box kobweb-align-top-start" style="width: 100%; display: flex; flex-wrap: wrap; justify-content: space-between;">
          <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="padding: 7px 0px; margin: 0px 24px 0px 0px;">
@@ -91,10 +112,10 @@
           </div>
          </div>
          <div class="kobweb-box kobweb-align-top-start" style="width: 360px; height: 272px; cursor: not-allowed;" id="k5_2018_white">
-          <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/k5_2018_white/2018-kia-optima-white.jpg" alt="Аренда Kia Optima 2018 в Бишкеке от 3500">
+          <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/k5_2018_white/2018-kia-optima-white.jpg" alt="Аренда Kia K5 2018 в Бишкеке от 3500">
           <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 100%; background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7));"></div>
           <div class="kobweb-align-bottom-start-self kobweb-col kobweb-arrange-top kobweb-align-start" style="margin: 0px 0px 40px 20px;">
-           <span class="silk-span-text" style="font-size: 40px; line-height: 44px; color: white; font-weight: bold;">Kia Optima</span><span class="silk-span-text" style="margin: 6px 0px 0px; font-size: 20px; color: white; font-weight: bold;">Нет в наличии</span>
+           <span class="silk-span-text" style="font-size: 40px; line-height: 44px; color: white; font-weight: bold;">Kia K5</span><span class="silk-span-text" style="margin: 6px 0px 0px; font-size: 20px; color: white; font-weight: bold;">Нет в наличии</span>
           </div>
          </div>
         </div>
@@ -185,7 +206,7 @@
         <span class="silk-span-text" style="font-size: 18px; color: white; opacity: 0.7; margin: 0px 0px 16px;">МЕНЮ</span><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#about_company">О компании</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Автопарк</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#rental_terms">Условия</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#contacts">Контакты</a>
        </div>
        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="flex-grow: 1;">
-        <span class="silk-span-text" style="font-size: 18px; color: white; opacity: 0.7; margin: 0px 0px 16px;">АВТОПАРК</span><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Эконом класс</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Премиум класс</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Внедорожники</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Электромобили</a>
+        <span class="silk-span-text" style="font-size: 18px; color: white; opacity: 0.7; margin: 0px 0px 16px;">АВТОПАРК</span><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Эконом класс</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Комфорт класс</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Кроссовер</a>
        </div>
        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="flex-grow: 1;">
         <a class="silk-link" style="font-size: 36px; color: white; cursor: pointer; text-decoration-line: none;" href="tel:+996772330507" id="footer_call">+996 (772) 33-05-07</a>
