--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -13,7 +13,7 @@
   <meta content="CarRent" name="apple-mobile-web-app-title">
   <meta content="1.0.3" name="version">
   <link href="/favicon/site.webmanifest" rel="manifest">
-  <script type="text/javascript" async src="https://www.googletagmanager.com/gtag/js?id=G-XC00NWY593&amp;l=dataLayer&amp;cx=c&amp;gtm=45He5230v9205283533za200"></script>
+  <script type="text/javascript" async src="https://www.googletagmanager.com/gtag/js?id=G-XC00NWY593&amp;l=dataLayer&amp;cx=c&amp;gtm=45He5240v9205283533za200"></script>
   <script async src="https://www.googletagmanager.com/gtm.js?id=GTM-KS945LF7"></script>
   <script src="/gtm.js"></script>
   <link href="/fonts/faces.css" rel="stylesheet">
@@ -132,7 +132,7 @@
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 32px 0px 0px;">
        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer;" id="rental_age">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer; user-select: none;" id="rental_age">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">С какого возраста я могу арендовать автомобиль?</span>
         </div>
         <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0; cursor: pointer;" id="rental_age">
@@ -141,7 +141,7 @@
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer;" id="rental_docs">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer; user-select: none;" id="rental_docs">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Что нужно для аренды автомобиля?</span>
         </div>
         <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0; cursor: pointer;" id="rental_docs">
@@ -150,7 +150,7 @@
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer;" id="rental_limit">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer; user-select: none;" id="rental_limit">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Сколько километров я могу проехать на автомобиле?</span>
         </div>
         <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0; cursor: pointer;" id="rental_limit">
@@ -159,7 +159,7 @@
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer;" id="rental_fines">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer; user-select: none;" id="rental_fines">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Что делать, если я получу штраф ПДД или нарушу скоростной режим?</span>
         </div>
         <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0; cursor: pointer;" id="rental_fines">
@@ -168,7 +168,7 @@
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer;" id="rental_accident">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer; user-select: none;" id="rental_accident">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Что делать если я попал в ДТП?</span>
         </div>
         <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0; cursor: pointer;" id="rental_accident">
